<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gate_app_bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/eklavya_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signin_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/signin_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_et_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_et_layout"
        style="@style/LoginTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/username_et_layout"
        app:layout_constraintStart_toStartOf="@+id/username_et_layout"
        app:layout_constraintTop_toBottomOf="@+id/username_et_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:imeOptions="actionGo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_drawable"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:text="@string/login_btn_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/password_et_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/password_et_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_et_layout" />

    <TextView
        android:id="@+id/powered_by_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/powered_by_label"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/powered_by_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/powered_by_value"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/qikkle_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/powered_by_label" />

   <include
       android:id="@+id/loading"
       layout="@layout/loading_bar_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

   </include>

</androidx.constraintlayout.widget.ConstraintLayout>