<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/scan_icon"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_qr_code_scanner" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_vertical_margin"
                android:text="Inventory Date"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scan_icon" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_label" />

            <TextView
                android:id="@+id/po_num_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_vertical_margin"
                android:text="@string/po_number_hint"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date" />

            <TextView
                android:id="@+id/tv_po_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:ems="10"
                android:hint="@string/po_number_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/po_num_label" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_vertical_margin"
                android:text="@string/category_hint"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_po_number" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:ems="10"
                android:hint="@string/category_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_label" />

            <TextView
                android:id="@+id/product_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_vertical_margin"
                android:text="@string/product_hint"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_category" />

            <TextView
                android:id="@+id/tv_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:ems="10"
                android:hint="@string/product_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_label" />

            <TextView
                android:id="@+id/make_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_vertical_margin"
                android:text="@string/make_hint"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_product" />

            <TextView
                android:id="@+id/tv_make"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:ems="10"
                android:hint="@string/make_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/make_label" />

            <TextView
                android:id="@+id/serial_no_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/field_vertical_margin"
                android:text="@string/serial_no_hint"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_make"  />

            <TextView
                android:id="@+id/tv_serial_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/light_gray"
                android:ems="10"
                android:hint="@string/serial_no_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serial_no_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/loading"
        layout="@layout/loading_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</RelativeLayout>